# MirrorExamples

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  Counter.tla  MODULE.bazel  jest.config.cjs  package.bazel.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.bazel.json  tsconfig.json
.opencode/: opencode.jsonc
scripts/: check  run_rbt_test
specs/: Counter.tla
specs/Counter/: Counter.tla
specs/RBT/: RBT.cfg  RBT.tla
specs/RBT/traces/: violation1.itf.json  violation10.itf.json  violation100.itf.json  violation101.itf.json  violation102.itf.json  violation103.itf.json  violation104.itf.json  violation105.itf.json  violation106.itf.json  violation107.itf.json  violation108.itf.json  violation109.itf.json  violation11.itf.json  violation110.itf.json  violation111.itf.json  violation112.itf.json  violation113.itf.json  violation114.itf.json  violation115.itf.json  violation116.itf.json  violation117.itf.json  violation118.itf.json  violation119.itf.json  violation12.itf.json  violation120.itf.json  violation121.itf.json  violation122.itf.json  violation123.itf.json  violation124.itf.json  violation125.itf.json  violation126.itf.json  violation127.itf.json  violation128.itf.json  violation129.itf.json  violation13.itf.json  violation130.itf.json  violation131.itf.json  violation132.itf.json  violation133.itf.json  violation134.itf.json  (+160 more)
specs/RBT/traces_max_step_4/: violation.itf.json  violation1.itf.json  violation10.itf.json  violation100.itf.json  violation101.itf.json  violation102.itf.json  violation103.itf.json  violation104.itf.json  violation105.itf.json  violation106.itf.json  violation107.itf.json  violation108.itf.json  violation109.itf.json  violation11.itf.json  violation110.itf.json  violation111.itf.json  violation112.itf.json  violation113.itf.json  violation114.itf.json  violation115.itf.json  violation116.itf.json  violation117.itf.json  violation118.itf.json  violation119.itf.json  violation12.itf.json  violation120.itf.json  violation121.itf.json  violation122.itf.json  violation123.itf.json  violation124.itf.json  violation125.itf.json  violation126.itf.json  violation127.itf.json  violation128.itf.json  violation129.itf.json  violation13.itf.json  violation130.itf.json  violation131.itf.json  violation132.itf.json  violation133.itf.json  (+160 more)
specs/RBT/traces_max_step_6/: violation.itf.json  violation1.itf.json  violation10.itf.json  violation100.itf.json  violation101.itf.json  violation102.itf.json  violation103.itf.json  violation104.itf.json  violation105.itf.json  violation106.itf.json  violation107.itf.json  violation108.itf.json  violation109.itf.json  violation11.itf.json  violation110.itf.json  violation111.itf.json  violation112.itf.json  violation113.itf.json  violation114.itf.json  violation115.itf.json  violation116.itf.json  violation117.itf.json  violation118.itf.json  violation119.itf.json  violation12.itf.json  violation120.itf.json  violation121.itf.json  violation122.itf.json  violation123.itf.json  violation124.itf.json  violation125.itf.json  violation126.itf.json  violation127.itf.json  violation128.itf.json  violation129.itf.json  violation13.itf.json  violation130.itf.json  violation131.itf.json  violation132.itf.json  violation133.itf.json  (+669 more)
src/: counter.ts  driver.ts  rbt.ts
test/: counter.test.ts  rbt.test.ts
