module(
    name = "counter",
    version = "0.1.0",
)

bazel_dep(name = "mirrorecma", version = "1.0.0")
git_override(
    module_name = "mirrorecma",
    remote = "https://github.com/NzSN/mirrorecma",
    commit = "bc58597a3a126239cbb50bd217d087bad5e1f08a",
)

bazel_dep(name = "modelmirrors", version = "0.1.0.0")
git_override(
    module_name = "modelmirrors",
    remote = "https://github.com/NzSN/ModelMirrors",
    commit = "48d0e527af5f0682c1a414f04b08b9c3ffceff72",
)

bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "aspect_rules_js", version = "3.2.0")
bazel_dep(name = "aspect_rules_ts", version = "3.8.10")

bazel_dep(name = "rules_nodejs", version = "6.7.4")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.14.0")
use_repo(node, "nodejs_toolchains")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "counter_npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "counter_npm")

# Transitive overrides inherited from mirrorecma (bzlmod requires root module to repeat)
git_override(
    module_name = "rules_haskell",
    remote = "https://github.com/NzSN/rules_haskell",
    commit = "25a55c4994eb32ab40cae03891b8a5070d66e7e3",
)

git_override(
    module_name = "rules_sh",
    remote = "https://github.com/tweag/rules_sh",
    commit = "c28667efc2fd9c95ceada90ce2b27d928fa36971",
)

bazel_dep(name = "rules_haskell", version = "1.0")
bazel_dep(name = "platforms", version = "1.0.0")

stack_snapshot = use_extension(
    "@rules_haskell//extensions:stack_snapshot.bzl",
    "stack_snapshot",
)
stack_snapshot.snapshot(local_snapshot = "@modelmirrors//:stackage_snapshot.yaml")
use_repo(stack_snapshot, "stackage", "stackage-exe")

ts = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
ts.deps(ts_version = "5.9.3")
use_repo(ts, "npm_typescript")
